--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "@rails/actiontext": "^6.1.4-1",
     "bootstrap": "^5.1.1",
-    "sass": "^1.41.1"
+    "sass": "^1.41.1",
+    "trix": "^1.3.1"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
